<resources>
    <string name="app_name">KickMyB</string>
    <string name="open_bar">Close me</string>
    <string name="close_bar">Open me</string>
    <string name="wait">Please wait</string>
    <string name="wait_msg">Loading...</string>
    <string name="not_log">You are not logged in</string>

    <string name="internet">No internet connexion</string>

    <string name="wrong">Wrong password or username</string>
    <string name="error">An error occured</string>
    <string name="exist">Username already exist</string>
    <string name="shor">Username too short</string>
    <string name="pas">Password too short</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="password_confirmation">Password confirmation</string>
    <string name="signUp">Sign Up</string>

    <string name="percentage">Percentage to modify</string>
    <string name="task">Task name</string>
    <string name="taskExist">Task name already exist</string>
    <string name="taskEmpty">Task name empty</string>
    <string name="taskShort">Task name too short</string>
    <string name="add">Add</string>

    <string name="login">login</string>
    <string name="account">No account yet ? Create an Account</string>
    <string name="signIn">Sign In</string>

    <string name="addTask">Add Task</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
</resources>