<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_height="match_parent" >

<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="176dp"
        android:layout_height="130dp"
        android:layout_gravity="center"
        android:layout_marginBottom="25dp"
        android:background="@drawable/logo"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="30dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:fontFamily="cursive"
        android:text="@string/signIn"
        android:textAlignment="center"
        android:textSize="30dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:layout_marginHorizontal="30dp"
        android:textColor="@color/black"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:id="@+id/userIn"
        android:layout_marginBottom="30dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_marginHorizontal="30dp"
        android:textColor="@color/black"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="30dp"
        android:id="@+id/passIn"
        android:inputType="textPassword"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_login"
        android:text="@string/login"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/button_bg"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_register_main"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/account"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="8dp" />
</LinearLayout>
    </ScrollView>
</RelativeLayout>